# barbershop-application

./: .env.example  Dockerfile  Dockerfile.test  README.md  alembic.ini  docker-compose.test.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
alembic/: env.py
alembic/versions/: 0288287bbab3_initial_schema.py  0e58e07e112d_add_review_model_and_relationships.py  895be6e2c727_remove_barber_profile_from_user.py  9a7c0250f265_add_review_model_and_relationships.py  d1c564949bed_initial_schema.py  d61037704139_remove_barber_profile_from_user.py
app/: main.py
app/api/: deps.py
app/core/: config.py  security.py
app/db/: base_models.py  init_db.py  initial_data.py  session.py
app/models/: __init__.py  appointment.py  barber.py  barberschedule.py  enums.py  review.py  role.py  user.py
app/schemas/: ai_assistant.py  appointment.py  barber.py  barber_schedule.py  review.py  user.py  validators.py
app/services/: ai_assistant_service.py  barber_rating.py  barber_service.py  booking_service.py  review_service.py  s3_service.py  user_service.py
app/utils/: code_generator.py  logger.py  redis_client.py  time_correction.py
data/: barbershop_info.yaml
scripts/: initialize.sh
tests/: conftest.py
tests/api/: test_ai_assistant.py  test_auth.py
tests/api-service/: test_ai_assistant.py  test_appointment.py  test_auth.py  test_barber_profile.py  test_review.py  test_s3_service.py  test_schedules.py  test_user.py
tests/utils/: test_celery.py  test_code_generator.py  test_logger.py  test_redis.py  test_selectors.py  test_time_correction.py
(+30 files in other folders)
