[project]
name = "barbershopapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "alembic>=1.16.2",
    "asyncpg>=0.30.0",
    "boto3>=1.38.38",
    "botocore>=1.38.38",
    "celery>=5.5.3",
    "elasticsearch[async]>=9.0.2",
    "fastapi>=0.115.13",
    "fastapi-limiter>=0.1.6",
    "kombu>=5.5.4",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.0",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.20",
    "redis>=6.2.0",
    "sentry-sdk[fastapi]>=2.30.0",
    "sqlalchemy>=2.0.41",
    "starlette-exporter>=0.23.0",
    "twilio>=9.6.3",
    "uvicorn>=0.34.3",
]
